# kairu-platform

./: .gitignore  Kairu - Unified Regression Test Plan.xlsx  README.md  models.py  pyproject.toml  todo.py
src/kairu/: main.py
tests/: test_models.py
